Fix overflow issue

--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ Primary use:	Showcase Portfolio
 	}
 
 	body {
-		/*overflow: hidden;*/
+		overflow-x: hidden;
 		/*overflow-y:scroll;*/
 		-webkit-transition: opacity 0.2s ease-in-out 0.2s;
 		transition: opacity 0.2s ease-in-out 0.2s;
